--- a/puppet_defined_types/sssd_3A_3Adomain.html
+++ b/puppet_defined_types/sssd_3A_3Adomain.html
@@ -89,8 +89,8 @@
 <p>Define an LDAP domain</p>
 </div></p>
       
-      <pre class="example code"><code>include ::sssd
-::sssd::domain { &#39;example.com&#39;:
+      <pre class="example code"><code>include sssd
+sssd::domain { &#39;example.com&#39;:
   id_provider           =&gt; &#39;ldap&#39;,
   ldap_schema           =&gt; &#39;rfc2307&#39;,
   ldap_uri              =&gt; [&#39;ldap://192.0.2.1&#39;],
@@ -4760,7 +4760,7 @@ define sssd::domain (
   Optional[String]                                                                      $ipa_group_override_object_class               = undef,
 ) {
 
-  if ! defined(Class[&#39;::sssd&#39;]) {
+  if ! defined(Class[&#39;sssd&#39;]) {
     fail(&#39;You must include the sssd base class before using any sssd defined resources&#39;)
   }
 
@@ -5155,9 +5155,9 @@ define sssd::domain (
 
   $config.each |String $setting, Any $value| {
     sssd_conf { &quot;domain/${domain}/${setting}&quot;:
-      target =&gt; $::sssd::conf_file,
+      target =&gt; $sssd::conf_file,
       value  =&gt; $value,
-      notify =&gt; Class[&#39;::sssd::daemon&#39;],
+      notify =&gt; Class[&#39;sssd::daemon&#39;],
     }
   }
 
